# pcu

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  PRLOG.md  README.md  config.toml  deny.toml  justfile  pcu.settings  release.toml  renovate.json  rustfmt-nightly.toml  sonar-project.properties  test_pull_request.txt
.cargo/: audit.toml
.circleci/: config.yml  release.yml  success.yml  update_prlog.yml  validation.yml
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
bluesky/: 10-update-and-release.post  20-workflow-overflow.post  bsky-test-blog.post  influences-jan-2025.post  introduction.post
crates/gen-bsky/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.old  build.rs  release-hook.sh  release.toml
crates/gen-bsky/docs/: lib.md
crates/gen-bsky/docs/readme/: head.md  tail.md
crates/gen-bsky/src/: capitalise.rs  draft.rs  error.rs  front_matter.rs  frontmatter_writeback.rs  lib.rs  post.rs  post_architecture.mmd  post_lifecycle.mmd  to_string_slash.rs  util.rs
crates/gen-bsky/src/draft/: blog_post.rs  draft_builder.rs
crates/gen-bsky/src/draft/blog_post/: front_matter.rs  link.rs
crates/gen-bsky/src/draft/blog_post/front_matter/: bluesky.rs  extra.rs  hashtags_pipeline.mmd  tags.rs  taxonomies.rs  taxonomies_architecture.mmd
crates/gen-bsky/src/front_matter/: bluesky.rs  extra.rs  taxonomies.rs
crates/gen-bsky/src/post/: bsky_post.rs
crates/gen-linkedin/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  release-hook.sh  release.toml
crates/gen-linkedin/src/: auth.rs  client.rs  draft.rs  error.rs  frontmatter.rs  frontmatter_writeback.rs  lib.rs  post.rs  posts.rs
crates/gen-linkedin/tests/: posts.rs
crates/pcu/: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  release-hook.sh  release.toml
crates/pcu/src/: cli.rs  client.rs  error.rs  lib.rs  pr_title.rs  workspace.rs
crates/pcu/src/cli/: bsky.rs  checkout.rs  comment_pr.rs  commit.rs  create_issue.rs  label.rs  linkedin.rs  pull_request.rs  push.rs  release.rs  trigger.rs  verify_signatures.rs
crates/pcu/src/cli/bsky/commands/: cmd_draft.rs  cmd_post.rs
crates/pcu/src/cli/bsky/commands/cmd_draft/: draft.rs  site_config.rs
crates/pcu/src/cli/bsky/commands/cmd_draft/draft/front_matter/: taxonomies.rs
crates/pcu/src/cli/bsky/commands/cmd_post/: poster.rs
crates/pcu/src/cli/linkedin/: commands.rs
crates/pcu/src/cli/linkedin/commands/: cmd_draft.rs  cmd_post.rs  cmd_share.rs
crates/pcu/src/cli/release/: mode.rs
crates/pcu/src/client/: graphql.rs  pull_request.rs
crates/pcu/src/client/graphql/: create_label.rs  get_label_id.rs  get_open_prs.rs  get_pr_by_commit.rs  get_pr_id.rs  get_pr_title.rs  get_repo_id.rs  get_tag.rs  label_pr.rs
crates/pcu/src/ops/: ci_env.rs  git_ops.rs  git_signature_ops.rs  gpg_ops.rs  make_release.rs  mod.rs  signature_ops.rs  trust_fetcher.rs  update_from_pr.rs
crates/pcu/src/utilities/: linkedin_post.rs  mod.rs  release_notes_provider.rs  release_unreleased.rs
crates/pcu/tests/: bsky-test-blog.md
crates/pcu/tests/bsky/: config.toml
crates/pcu/tests/bsky/blog/update-and-release/: 20-workflow-overflow.md
crates/pcu/tests/bsky/content/blog/: _index.md  influences-jan-2025.md  influences-original.md  introduction.md
crates/pcu/tests/bsky/content/blog/update-and-release/: 20-workflow-overflow.md  _index.md
crates/pcu/tests/data/: expected_prlog.md  release_prlog.md
crates/pcu/tests/linkedin/: config.toml
crates/pcu/tests/linkedin/content/blog/: another-post.md  linkedin-test-blog.md
docs/: SIGNATURE_VERIFICATION.md  from-merge-usage.md  reference-implementation-verify-signatures.sh
docs/plans/: per-crate-release-workflow.md
docs/rfcs/: 0001-verify-signatures-subcommand.md  ISSUE-verify-signatures.md
scripts/: check-crates-io-version.sh  detect-crate-release.sh  prepare-crate-release.sh  release-prlog.sh
src/: change_frag.rs  change_log.rs  cli.rs  client.rs  error.rs  lib.rs  log_update.rs  main.rs  pr_title.rs  workspace.rs
src/cli/: bsky.rs  cli.rs  commit.rs  label.rs  main.rs  pull_request.rs  push.rs  release.rs
src/cli/bsky/: build.rs  commands.rs  draft.rs  front_matter.rs  poster.rs
src/cli/bsky/commands/: cmd_draft.rs  cmd_post.rs
src/cli/bsky/commands/cmd_draft/: draft.rs
src/cli/bsky/commands/cmd_draft/draft/: front_matter.rs  redirector.rs  site_config.rs
src/cli/bsky/commands/cmd_draft/draft/front_matter/: bluesky.rs  extra.rs  taxonomies.rs
src/cli/bsky/commands/cmd_post/: poster.rs
src/cli/release/: mode.rs
src/client/: git_ops.rs  graphql.rs  mod.rs  pull_request.rs
src/client/graphql/: create_label.rs  get_label_id.rs  get_open_prs.rs  get_pr_id.rs  get_repo_id.rs  get_tag.rs  label_pr.rs  mod.rs
src/lib/: cli.rs  error.rs  lib.rs  pr_title.rs  workspace.rs
src/lib/client/: graphql.rs  mod.rs  pull_request.rs
src/lib/client/graphql/: create_label.rs  get_label_id.rs  get_open_prs.rs  get_pr_title.rs  get_repo_id.rs  label.rs  label_pr.rs  mod.rs  pr_title.rs  prs.rs  repo.rs
src/lib/ops/: git_ops.rs  make_release.rs  mod.rs  update_from_pr.rs
src/lib/utilities/: release_notes_provider.rs  release_unreleased.rs
src/ops/: git_ops.rs  make_release.rs  update_from_pr.rs
src/utilities/: release_unreleased.rs
tests/: bsky-test-blog.md
tests/bsky/blog/: influences-jan-2025.md  influences-original.md  introduction.md  stuck-in-the-middle.md
tests/bsky/blog/update-and-release/: 10-update-and-release.md  20-overview-of-our-workflow.md  20-workflow-overflow.md  70-last-page.md  _index.md
tests/data/: expected_changelog.md  expected_changelog_issue_172.md
