[workspace]
members = ["crates/pcu", "crates/gen-bsky", "crates/gen-linkedin"]
default-members = ["crates/pcu"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.87"
repository = "https://github.com/jerus-org/pcu"

[workspace.dependencies]
aquamarine = "0.6.0"
base62 = "2.2.3"
bsky-sdk = "0.1.22"
cargo_toml = "0.22.3"
chrono = "0.4.42"
clap = "4.5.53"
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
config = {version = "0.15.19", features = ["toml"], default-features = false}
env_logger = "0.11.8"
gen-bsky = { path = "crates/gen-bsky", version = "0.1.0" }
gen-linkedin = { path = "crates/gen-linkedin", version = "0.1.0" }
git2 = "0.20.3"
git2_credentials = "0.15.0"
gql_client = "1.0.8"
keep-a-changelog = "0.1.4"
link-bridge = "0.2.3"
# keep-a-changelog = { git = "https://github.com/jerusdp/keep-a-changelog-rs.git", branch = "feat-add-link" }
log = "0.4.29"
named-colour = { version = "0.3.25", features = ["extended"] }
octocrate = { version = "2.2.0", features = [
    "apps",
    "issues",
    "pulls",
    "repos",
    "users",
    "rustls-tls",
], default-features = false }
owo-colors = "4.2.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["std", "env-filter"] }
rstest = "0.26.1"
sequoia-openpgp = { version = "2.1.0", default-features = false, features = ["crypto-openssl"] }
unicode-segmentation = "1.12.0"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"

[workspace.lints.clippy]
uninlined-format-args = "warn"
