[workspace]
members = ["crates/pcu", "crates/gen-bsky", "crates/gen-linkedin"]
default-members = ["crates/pcu"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.88"
repository = "https://github.com/jerus-org/pcu"

[workspace.dependencies]
aquamarine = "0.6.0"
base64 = "0.22.1"
base62 = "2.2.4"
bsky-sdk = "0.1.24"
cargo_toml = "0.22.3"
chrono = "0.4.44"
clap = "4.6.0"
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
config = {version = "0.15.19", features = ["toml"], default-features = false}
env_logger = "0.11.10"
gen-bsky = { path = "crates/gen-bsky", version = "0.1.19" }
gen-linkedin = { path = "crates/gen-linkedin", version = "0.1.12" }
git2 = "0.20.4"
git2_credentials = "0.15.0"
gql_client = "1.1.0"
bytes = "1.11.1"
kdeets = "0.1.30"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
keep-a-changelog = "0.1.4"
link-bridge = "0.2.5"
# keep-a-changelog = { git = "https://github.com/jerusdp/keep-a-changelog-rs.git", branch = "feat-add-link" }
log = "0.4.29"
named-colour = { version = "0.3.26", features = ["extended"] }
octocrate = { version = "2.2.0", features = [
    "apps",
    "file-body",
    "issues",
    "pulls",
    "repos",
    "users",
    "rustls-tls",
], default-features = false }
owo-colors = "4.3.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
sha2 = "0.11.0"
openidconnect = { version = "4.0.1", default-features = false }
sigstore = { version = "0.13", default-features = false, features = ["sign", "sigstore-trust-root", "rustls-tls"] }
sigstore_protobuf_specs = "0.5"
tokio = { version = "1.51.0", features = ["fs", "macros", "rt-multi-thread", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["std", "env-filter"] }
rstest = "0.26.1"
sequoia-openpgp = { version = "2.2.0", default-features = false, features = ["crypto-openssl"] }
unicode-segmentation = "1.13.2"
url = "2.5.8"
uuid = { version = "1.23.0", features = ["v4"] }
walkdir = "2.5.0"
wiremock = "0.6.5"

[workspace.lints.clippy]
uninlined-format-args = "warn"
