[workspace]
members = ["crates/pcu", "crates/gen-bsky", "crates/gen-linkedin"]
default-members = ["crates/pcu"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.89"
repository = "https://github.com/jerus-org/pcu"

[workspace.dependencies]
base64 = "0.22.1"
simple-mermaid = "0.2.0"
base62 = "2.2.4"
bsky-sdk = "0.1.24"
cargo_toml = "1.0.0"
chrono = "0.4.45"
clap = "4.6.4"
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
config = {version = "0.15.24", features = ["toml"], default-features = false}
env_logger = "0.11.11"
gen-bsky = { path = "crates/gen-bsky", version = "0.1.31" }
gen-linkedin = { path = "crates/gen-linkedin", version = "0.1.24" }
# git2 0.21 changed its default features to `[]` (0.20 defaulted to
# ["ssh", "https"]). Without `https`, libgit2 is built with no TLS backend and
# every HTTPS git op fails at runtime ("there is no TLS stream available").
# Enable them explicitly; `ssh` keeps SSH remotes working too.
git2 = { version = "0.21.0", features = ["ssh", "https"] }
git2_credentials = "0.16.0"
gql_client = "1.1.0"
bytes = "1.12.1"
kdeets = "0.1.31"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
keep-a-changelog = "0.1.4"
link-bridge = "0.2.6"
# keep-a-changelog = { git = "https://github.com/jerusdp/keep-a-changelog-rs.git", branch = "feat-add-link" }
log = "0.4.33"
named-colour = { version = "0.3.26", features = ["extended"] }
octocrate = { version = "2.2.0", features = [
    "apps",
    "file-body",
    "issues",
    "pulls",
    "repos",
    "users",
    "rustls-tls",
], default-features = false }
owo-colors = "4.3.0"
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tempfile = "3.27.0"
thiserror = "2.0.19"
sha2 = "0.11.0"
openidconnect = { version = "4.0.1", default-features = false }
sigstore = { version = "0.14.0", default-features = false, features = ["sign", "sigstore-trust-root", "rustls-tls"] }
sigstore_protobuf_specs = "0.5.1"
tokio = { version = "1.53.1", features = ["fs", "macros", "rt-multi-thread", "time"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["std", "env-filter"] }
rstest = "0.26.1"
sequoia-openpgp = { version = "2.4.1", default-features = false, features = ["crypto-openssl"] }
unicode-segmentation = "1.13.3"
url = "2.5.8"
uuid = { version = "1.24.0", features = ["v4"] }
walkdir = "2.5.0"
wiremock = "0.6.5"

[workspace.lints.clippy]
uninlined-format-args = "warn"
