[package]
name = "gen-bsky"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
description = "A Library to generate and post a bluesky post"
rust-version.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
repository.workspace = true
keywords = ["ci", "github", "bluesky"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
categories = ["development-tools::build-utils"]

[dependencies]
bsky-sdk.workspace = true
link-bridge.workspace = true
log.workspace = true
regex.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
env_logger.workspace = true
