[package]
name = "gen-linkedin"
version = "0.1.12"
edition.workspace = true
authors.workspace = true
description = "Minimal LinkedIn Posts API client for CI usage"
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage = "https://github.com/jerus-org/pcu"
documentation = "https://docs.rs/gen-linkedin"
readme = "README.md"
keywords = ["linkedin", "api", "client"]
categories = ["api-bindings"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[features]
# Default to the Posts API only. Optional legacy UGC and OAuth helpers are feature-gated.
default = ["posts"]
posts = []
ugc = []
oauth2 = []

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
