[package]
name = "pcu"
version = "0.6.1"
edition.workspace = true
authors.workspace = true
description = "A CI tool to update change log in a PR"
rust-version.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
repository.workspace = true
keywords = ["ci", "github", "changelog"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
base62.workspace = true
bsky-sdk.workspace = true
cargo_toml.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
color-eyre.workspace = true
config.workspace = true
env_logger.workspace = true
gen-bsky.workspace = true
git2.workspace = true
git2_credentials.workspace = true
gql_client.workspace = true
keep-a-changelog.workspace = true
link-bridge.workspace = true
log.workspace = true
named-colour.workspace = true
octocrate.workspace = true
owo-colors.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-segmentation.workspace = true
url = { features = ["serde"], workspace = true }

[dev-dependencies]
rstest.workspace = true
uuid.workspace = true

[lib]
name = "pcu"
path = "src/lib.rs"

[[bin]]
name = "pcu"
path = "src/bin/main.rs"

[lints]
workspace = true
